Adding new fonts, styling, etc.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Coronavirus statistics</title>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700:800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
   <script src="script.js"></script>
 </head>
 
@@ -14,5 +14,10 @@
     <div id="title">Coronavirus statistics</div>
   </div>
 </body>
+
+<script>
+  // Setting title margin top when window is ready 
+  document.getElementById('title').style.marginTop = window.innerHeight / 7 + 'px'
+</script>
 
 </html>
