--- a/index.html
+++ b/index.html
@@ -5,31 +5,37 @@
   <meta charset="UTF-8">
   <title>Coronavirus statistics</title>
   <link rel="stylesheet" href="fonts.css">
+  <link rel="stylesheet" href="loadingprogress.css">
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
 </head>
 
 <body>
-  <div id="bg">
-    <div id="title">Coronavirus statistics</div>
-    <div id="content" class="content">
-      <div id="worldwide_stats">
-        <div style="text-align: center;">
-          <div class="worldwide_stats_label">Confirmed</div>
-          <div class="worldwide_stats_number" id="number_confirmed">5654654</div>
-        </div>
-        <div style="text-align: center;">
-          <div class="worldwide_stats_label">Recovered</div>
-          <div class="worldwide_stats_number" id="number_recovered">5654654</div>
-        </div>
-        <div style="text-align: center;">
-          <div class="worldwide_stats_label">Deaths</div>
-          <div class="worldwide_stats_number" id="number_deaths">5654654</div>
-        </div>
+  <div id="title">Coronavirus statistics</div>
+  <div id="progressbar">
+    <div class="loadingio-spinner-eclipse-tjvso7ycmw">
+      <div class="ldio-ei1bd21gfac">
+        <div></div>
       </div>
     </div>
   </div>
-</body> 
+  <div id="content" class="content">
+    <div id="worldwide_stats">
+      <div style="text-align: center;">
+        <div class="worldwide_stats_label">Confirmed</div>
+        <div class="worldwide_stats_number" id="number_confirmed">5654654</div>
+      </div>
+      <div style="text-align: center;">
+        <div class="worldwide_stats_label">Recovered</div>
+        <div class="worldwide_stats_number" id="number_recovered">5654654</div>
+      </div>
+      <div style="text-align: center;">
+        <div class="worldwide_stats_label">Deaths</div>
+        <div class="worldwide_stats_number" id="number_deaths">5654654</div>
+      </div>
+    </div>
+  </div>
+</body>
 
 <script>
   document.getElementById('content').classList.add('fade');
