Renamed porgress bar css file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>Coronavirus statistics</title>
   <link rel="stylesheet" href="fonts.css">
-  <link rel="stylesheet" href="loadingprogress.css">
+  <link rel="stylesheet" href="progress-bar.css">
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
 </head>
